2006-03-15  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.xml: Oops, forgot to credit Vincent for his ideas.
	Also fix the caption for figure 13.

2006-03-12  Callum McKenzie  <callum@spooky-possum.org>

	* figures/easy-hints-*.png
	* figures/hard-hints-*.png
	* gnomine.xml: Finish off the documentation and redo the
	screenshots to have the correct theme and avoid dark corners.
	Add images for the strategy section.

2006-03-07  Callum McKenzie  <callum@spooky-possum.org>

	* legal.xml: Dual license the docs under GPL/GFDL.

2006-01-27  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.xml: 
	* figures/*.png: Complete rewrite of the documentation in a more
	modern style. Removed all the old figures and replaced them with
	new ones. The work is currently incomplete, the second half is
	nothing more than a rough draft and none of the figures use the
	correct theme.

2006-01-09  Callum McKenzie  <callum@spooky-possum.org>

	* gnomine.xml: Add a note about the pointlessness of high scores
	in custom mode. Minor word tweaks.

2005-07-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* figures/*:
	* gnomine.xml: Bump the appversion for 2.12 and update the
	screenshots.

2005-05-09  Alan Horkan <horkana tcd ie>

	* gnomine.xml: Removed Known Bugs sections where not needed.	

2005-05-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.xml: Document the change in the button that reveals
	surrounding squares.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.xml: Bump the app version number. No revisions.

2004-09-09  callum  <callum@spooky-possum.org>

	* figures/*.png:
	* gnomine.xml: Updates for 2.8.

2004-03-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* figures/*:
	* gnomine.xml: Updates for 2.6.

2003-08-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.xml: Added documentation for the new hint item.

2003-08-01  Callum McKenzie  <callum@physics.otago.ac.nz>
