@@ -1,3 +1,8 @@
+2006-03-22  Callum McKenzie  <callum@spooky-possum.org>
+
+	* gnomine.xml: Replace the bugzilla link with a
+	ghelp:gnome-feedback link.
+
 2006-03-15  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gnomine.xml: Oops, forgot to credit Vincent for his ideas.
